--- a/package.json
+++ b/package.json
@@ -14,17 +14,24 @@
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
+    "axios": "^1.13.2",
+    "flowbite": "^4.0.1",
+    "flowbite-vue": "^0.2.2",
     "vue": "^3.5.25"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@tailwindcss/postcss": "^4.1.18",
     "@vitejs/plugin-vue": "^6.0.2",
     "@vitejs/plugin-vue-jsx": "^5.1.2",
     "@vue/eslint-config-prettier": "^10.2.0",
+    "autoprefixer": "^10.4.17",
     "eslint": "^9.39.1",
     "eslint-plugin-vue": "~10.5.1",
     "globals": "^16.5.0",
+    "postcss": "^8.4.35",
     "prettier": "3.6.2",
+    "tailwindcss": "^3.4.1",
     "vite": "^7.2.4",
     "vite-plugin-vue-devtools": "^8.0.5"
   }
